[tool.poetry]
name = "pysparklabs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kagglehub = "^0.3.6"
pyspark = "^3.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
